Sprint3-Ticket4-Feature: Pagination, filtre, tri des catégories

--- a/templates/pages/admin/category/index.html.twig
+++ b/templates/pages/admin/category/index.html.twig
@@ -31,6 +31,7 @@
             {{message}}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
+        {# jkhj #}
     {% endfor %}
 
     <div class="d-flex justify-content-end align-items-center my-3">
