--- a/templates/pages/admin/category/index.html.twig
+++ b/templates/pages/admin/category/index.html.twig
@@ -26,13 +26,8 @@
 {% block main %}
     <h1 class="text-center my-3 display-5">Liste des catégories</h1>
 
-    {% for message in app.flashes('success') %}
-        <div class="text-center alert alert-success alert-dismissible fade show" role="alert">
-            {{message}}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        {# jkhj #}
-    {% endfor %}
+    {% include "components/alert.html.twig" with {'type': 'success'}  %}
+    {% include "components/alert.html.twig" with {'type': 'warning'}  %}
 
     <div class="d-flex justify-content-end align-items-center my-3">
         <a href="{{path('admin.category.create')}}" class="btn btn-primary shadow"><i class="fa-solid fa-plus"></i> Nouvelle catégorie</a>
@@ -60,7 +55,7 @@
                         <td>{{category.updatedAt|date('d-m-Y')}}</td>
                         <td>
                             <a class="text-secondary mx-2" href="{{path('admin.category.edit', {'id': category.id})}}" title="Modifier {{category.name}}"><i class="fas fa-edit"></i></a>
-                            <a onclick="event.preventDefault(); return confirm('Confirmer la suppression?') && document.querySelector('#delete_category_form_{{category.id}}').submit();" class="text-danger mx-2" href="" title="Supprimer {{category.name}}"><i class="fa-solid fa-trash"></i></a>
+                            <a onclick="event.preventDefault(); return confirm('Attention!!! En supprimant cette catégorie, vous supprimez tous ses articles associés. Confirmez?') && document.querySelector('#delete_category_form_{{category.id}}').submit();" class="text-danger mx-2" href="" title="Supprimer {{category.name}}"><i class="fa-solid fa-trash"></i></a>
                             <form method="POST" action="{{path('admin.category.delete', {'id':category.id})}}" id="delete_category_form_{{category.id}}">
                                 <input type="hidden" name="csrf_token" value="{{csrf_token('delete_category_'~category.id)}}">
                                 <input type="hidden" name="_method" value="DELETE">
