--- a/templates/pages/admin/post/create.html.twig
+++ b/templates/pages/admin/post/create.html.twig
@@ -4,6 +4,10 @@
 
 {% block description %}Nouvel article{% endblock %}
 
+{% block jQuery %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+{% endblock %}
+
 {# The text editor #}
 {% block tinyMCE %}
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
@@ -31,10 +35,16 @@
                         <div class="text-danger">{{form_errors(form.category)}}</div>
                         {{form_widget(form.category, {'attr': {'class': 'form-control'}})}}
                     </div>
-                    <div class="mb-3">
-                        <label for="post_form_imageFile_file">Image</label>
-                        <div class="text-danger">{{form_errors(form.imageFile)}}</div>
-                        {{form_widget(form.imageFile, {'attr': {'class': 'form-control'}})}}
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="post_form_imageFile_file">Image</label>
+                            <div class="text-danger">{{form_errors(form.imageFile)}}</div>
+                            {{form_widget(form.imageFile, {'attr': {'class': 'form-control'}})}}
+                        </div>
+                        <div class="col-md-6">
+                            <div class="preview-image-title"></div>
+                            <div class="preview-image-content"></div>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="post_form_content">Contenu</label>
@@ -48,4 +58,31 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        $(document).ready(function () {
+            
+            $("#post_form_imageFile_file").on('change', function(){
+                let file = $(this).get(0).files[0];
+
+                if (file) 
+                {
+                    let fileReader = new FileReader();
+
+                    fileReader.onload = function(){
+
+                        let p   = `<p>Aperçu de l'image</p>`;
+                        let img = `<img src="${fileReader.result}" class="img-fluid" alt="Prévisualisation de l'image de l'article."/>`;
+
+                        $('.preview-image-title').html(p);
+                        $('.preview-image-content').html(img);
+                    };
+
+                    fileReader.readAsDataURL(file);
+                }
+            });
+        });
+    </script>
 {% endblock %}
