--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %} - Admin - Le blog de Jean Dupont</title>
     <meta name="description" content="{% block description %}{% endblock %}">
 
     {# Favicon #}
@@ -140,7 +140,7 @@
                               </a>
                           </li>
                           <li class="nav-item">
-                              <a class="nav-link d-flex align-items-center gap-2" href="">
+                              <a class="nav-link d-flex align-items-center gap-2" href="{{path('admin.tag.index')}}">
                                   <i class="fa-solid fa-hashtag"></i>
                                   Tags
                               </a>
