--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -152,7 +152,7 @@
                               </a>
                           </li>
                           <li class="nav-item">
-                              <a class="nav-link d-flex align-items-center gap-2" href="">
+                              <a class="nav-link d-flex align-items-center gap-2" href="{{path('admin.user.index')}}">
                                   <i class="fa-solid fa-users"></i>
                                   Utilisateurs
                               </a>
