--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -169,7 +169,7 @@
 
                       <ul class="nav flex-column mb-auto">
                           <li class="nav-item">
-                              <a class="nav-link d-flex align-items-center gap-2" href="">
+                              <a class="nav-link d-flex align-items-center gap-2" href="{{path('admin.profile.index')}}">
                                   <i class="fa-solid fa-user"></i>
                                   Mon profil
                               </a>
