Sprint4-Ticket4-Feature: Gestion des contacts

--- a/templates/pages/visitor/blog/index.html.twig
+++ b/templates/pages/visitor/blog/index.html.twig
@@ -8,6 +8,6 @@
 
 {% block main %}
     <main>
-        <h1 class="text-center my-3 display-5">Page de blog</h1>
+        {% include 'components/header_visitor.html.twig' with {'h1':'Page de blog'} %}
     </main>
 {% endblock %}
