Sprint4-Ticket5-Feature: Gestion de la page d'accueil du site

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -6,6 +6,11 @@
 @import "~bootstrap/scss/bootstrap";
 
 
+// Components
+@import "./components/active";
+@import "./components/header";
+
+
 // Base
 @import "./base/typography";
 
