--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -1,3 +1,4 @@
+{% set pathInfo = app.request.pathInfo %}
 <!DOCTYPE html>
 <html lang="fr">
     <head>
@@ -46,7 +47,7 @@
     <body class="body-visitor">
 
         {# Navbar #}
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{path('visitor.welcome.index')}}">JD</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,16 +56,34 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{path('visitor.welcome.index')}}">Accueil</a>
+                            <a 
+                                class="nav-link {{ pathInfo == path('visitor.welcome.index') ? 'jd-active' : '' }}" 
+                                {{ pathInfo == path('visitor.welcome.index') ? 'aria-current="page"' : '' }}
+                                href="{{path('visitor.welcome.index')}}"
+                            >
+                                Accueil
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Qui suis-je?</a>
+                            <a class="nav-link" href="{{path('visitor.welcome.index')}}#about-me">Qui suis-je?</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{path('visitor.blog.index')}}">Blog</a>
+                            <a 
+                                href="{{path('visitor.blog.index')}}"
+                                class="nav-link {{ pathInfo == path('visitor.blog.index') ? 'jd-active' : '' }}" 
+                                {{ pathInfo == path('visitor.blog.index') ? 'aria-current="page"' : '' }}
+                            >
+                                Blog
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{path('visitor.contact.create')}}">Contact</a>
+                            <a 
+                                href="{{path('visitor.contact.create')}}"
+                                class="nav-link {{ pathInfo == path('visitor.contact.create') ? 'jd-active' : '' }}" 
+                                {{ pathInfo == path('visitor.contact.create') ? 'aria-current="page"' : '' }}
+                            >
+                                Contact
+                            </a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
@@ -84,10 +103,10 @@
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{path('visitor.authentication.login')}}">Connexion</a>
+                                <a class="my-2 mx-sm-2 btn btn-outline-primary shadow" href="{{path('visitor.authentication.login')}}">Connexion</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{path('visitor.registration.register')}}">Inscription</a>
+                                <a class="my-2 mx-sm-2 btn btn-primary shadow" href="{{path('visitor.registration.register')}}">Inscription</a>
                             </li>
                         {% endif %}
                         
