--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -158,7 +158,7 @@
                               </a>
                           </li>
                           <li class="nav-item">
-                              <a class="nav-link d-flex align-items-center gap-2" href="">
+                              <a class="nav-link d-flex align-items-center gap-2" href="{{path('admin.comment.index')}}">
                                   <i class="fa-solid fa-comment"></i>
                                   Commentaires
                               </a>
