--- a/templates/pages/visitor/blog/show.html.twig
+++ b/templates/pages/visitor/blog/show.html.twig
@@ -6,6 +6,11 @@
 
 {% block keywords %}Blog, Jean Dupont, Santé, Medecine, Articles{% endblock %}
 
+{# Font awesome #}
+{% block fontAwesome %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+{% endblock %}
+
 {% block main %}
     <main>
 
@@ -29,9 +34,20 @@
                 <small>Publié {{post.publishedAt|ago}} par Jean Dupont</small>
             </div>
 
-            <div class="container-jd my-5">
+            <article class="container-jd my-5">
                 {{post.content|raw}}
-            </div>
+
+                <a id="like-link" href="{{path('visitor.blog.post.like', {'id':post.id, 'slug':post.slug})}}">
+                    {% if app.user and post.isLikedBy(app.user) %}
+                        <i class="fa-solid fa-thumbs-up"></i> {# Pouce liké #}
+                    {% else %}
+                        <i class="fa-regular fa-thumbs-up"></i> {# Pouce non liké #}
+                    {% endif %}
+                    
+                    <span id="total-likes-container">{{post.postLikes|length}}</span>
+                    <span>J'aime</span>
+                </a>
+            </article>
 
             {% if app.user %}
                 <div class="my-5 container-jd">
@@ -70,4 +86,38 @@
         </div>
 
     </main>
+{% endblock %}
+
+{% block javascript %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $(document).ready(function(){
+            $('#like-link').on('click', function(event){
+                event.preventDefault();
+
+                $.ajax({
+                    url: this.href,
+                    type: 'GET',
+                    success: function(response){
+                        $('#total-likes-container').html(response.totalLikes);
+
+                        if ($('i').hasClass('fa-regular')) {
+                            $('i').removeClass('fa-regular');
+                            $('i').addClass('fa-solid');
+                        } else {
+                            $('i').removeClass('fa-solid');
+                            $('i').addClass('fa-regular');
+                        }
+                    },
+                    error: function(response){
+                        if (response.status == 403) {
+                            alert(response.responseJSON.message);
+                        } else {
+                            alert("Une erreur est survenue. Veuillez réessayer plus tard.");
+                        }
+                    }
+                });
+            });
+        });
+    </script>
 {% endblock %}
